Fix UI misalignment of Filter by Price in TT1 theme

--- a/assets/js/base/components/price-slider/style.scss
+++ b/assets/js/base/components/price-slider/style.scss
@@ -331,7 +331,6 @@
 	}
 	.wc-block-components-price-slider__range-input-progress {
 		--range-color: currentColor;
-		margin: -$border-width;
 	}
 	.wc-block-price-filter__range-input {
 		background: transparent;
@@ -350,7 +349,10 @@
 			}
 		}
 		&::-webkit-slider-thumb {
-			margin-top: -9px;
+			margin-top: -6px;
+			// These values have to be repeated to increase the specificity of the theme styles
+			width: 12px;
+			height: 12px;
 		}
 		&.wc-block-components-price-slider__range-input--max::-moz-range-thumb {
 			transform: translate(2px, 1px);
